--- a/client/chrome-ext-react/src/index.css
+++ b/client/chrome-ext-react/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: auto;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -7,11 +7,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
   width: 300px;
   height: 500px;
-  border: 1px solid red;
   text-align: center;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+a {
+  text-decoration: none;
+  color: white;
 }
